--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
     <!-- About Section-->
 
-
     <section class="about">
       <div class="about-img">
         <img src="images/About.jpg" alt="" />
@@ -94,35 +93,177 @@
     <!-- Products Section-->
 
     <section class="products">
-<div class="heading">
-  <h2>Our Popular Products</h2>
-</div>
+      <div class="heading">
+        <h2>Our Popular Products</h2>
+      </div>
 
-   <!-- Container -->
-    <div class="products-container">
-      <div class="box">
-        <img src="images/images.jpg" alt="">
-        <h3>Americano Pure</h3>
-        <div class="content">
-          <span>$25</span>
-          <a href="#">Add to cart</a>
+      <!-- Container -->
+      <div class="products-container">
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
+        </div>
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
 
-     <div class="box">
-            <img src="images/images.jpg" alt="">
-            <h3>Americano Pure</h3>
-            <div class="content">
-              <span>$25</span>
-              <a href="#">Add to cart</a>
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
+        </div>
 
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
 
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
+
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
+
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="images/bag.png" alt="" />
+          <h3>Americano Pure</h3>
+
+          <div class="content">
+            <span>$25</span>
+            <a href="#">Add to cart</a>
+          </div>
         </div>
       </div>
-    </div>
     </section>
 
+    <!-- Customers Section-->
+    <section class="customers">
+      <div class="heading">
+        <h2>Our Customer's</h2>
+      </div>
 
+      <!-- Container-->
+      <div class="customers-container">
+        <div class="box">
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, iste
+            exercitationem possimus necessitatibus inventore magni in totam
+            eveniet. Distinctio corporis sed repellendus modi perspiciatis
+            reiciendis nulla maiores recusandae in eos.
+          </p>
+          <h2>Nick Smith</h2>
+          <img src="images/rev1.jpg" alt="" />
+        </div>
 
+        <div class="box">
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, iste
+            exercitationem possimus necessitatibus inventore magni in totam
+            eveniet. Distinctio corporis sed repellendus modi perspiciatis
+            reiciendis nulla maiores recusandae in eos.
+          </p>
+          <h2>Jake Wood</h2>
+          <img src="images/rev2.jpg" alt="" />
+        </div>
 
+        <div class="box">
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, iste
+            exercitationem possimus necessitatibus inventore magni in totam
+            eveniet. Distinctio corporis sed repellendus modi perspiciatis
+            reiciendis nulla maiores recusandae in eos.
+          </p>
+          <h2>Kendall Wine</h2>
+          <img src="images/rev3.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer-box">
+        <h2>Coffee Shop</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae dolor
+          maxime minima error nesciunt ipsa repudiandae iusto similique
+          excepturi. Obcaecati, repellendus quis odit eveniet nulla perspiciatis
+          tempora excepturi ab harum.
+        </p>
+        <div class="social">
+
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-tiktok'></i></a>
+        </div>
+      </div>
+      <div class="footer-box">
+        <h3>Support</h3>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Help & Support</a></li>
+        <li><a href="#">Return Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+      </div>
+      <div class="footer-box">
+        <h3>View Guides</h3>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Career</a></li>
+        <li><a href="#">Blog Posts</a></li>
+        <li><a href="#">Our Branches</a></li>
+      </div>
+      <div class="footer-box">
+       <h3>Contact</h3>
+        <div class="contact">
+          <span><i class='bx bxs-map'></i>67 Antonio Sciortino</span>
+          <span><i class='bx bxs-phone'></i>+356 9999 9999</span>
+          <span><i class='bx bxs-envelope'></i>coffee@shop.com</span>
+          
+        </div>
+      </div>
+    </section>
 
     <script src="index.js"></script>
   </body>
